--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-<title>Jenkins CI/CD Pipeline</title>
+<title>Jenkins-CI/CD</title>
 <body>
 <h1> Welcome to Cloud PE </h1>
+<h2> Cloud Performance Engineerig in DevOps </h2>
 </body>
 </html>
