--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1> Welcome to Cloud PE </h1>
 <h2> This is Testing Env </h2>
-<h2> This is Production too </h2>
+<h2> This is Production Env too </h2>
 </body>
 </html>
