--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1> Hello Raushan.. How are you doing?</h1>
 <h2> This is Testing Env </h2>
-<h2> This is Production Env too </h2>
+<h2> This is Production Env as well </h2>
 <h3> Let's look into Continuous Testing in DevOps</h3>
 </body>
 </html>
