--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <h2> This is Production Env as well </h2>
 <h3> Let's look into Continuous Testing in DevOps</h3>
 <h4> My Performance Test is successful..</h4>
+<h5> Thank you for attending the session </h5>
 </body>
 </html>
